--- a/fly.toml
+++ b/fly.toml
@@ -1,28 +1,26 @@
-app = "n8n-app"
-kill_signal = "SIGINT"
-kill_timeout = 5
+app = "n8n-deploy"
+primary_region = "iad" # المنطقة: Virginia, US
+
+[build]
+  dockerfile = "./Dockerfile"
 
 [env]
-N8N_BASIC_AUTH_ACTIVE = "true"
-N8N_BASIC_AUTH_USER = "admin"
-N8N_BASIC_AUTH_PASSWORD = "changeme"
-N8N_HOST = "0.0.0.0"
-N8N_PORT = "5678"
+  N8N_BASIC_AUTH_ACTIVE = "true"
+  N8N_BASIC_AUTH_USER = "admin"
+  N8N_BASIC_AUTH_PASSWORD = "yourStrongPassword"
+  N8N_HOST = "0.0.0.0"
+  N8N_PORT = "5678"
+  DB_TYPE = "mongodb"
+  DB_MONGODB_CONNECTION_URL = "mongodb+srv://<username>:<password>@<cluster-url>/<db>?retryWrites=true&w=majority"
 
 [[services]]
   internal_port = 5678
   protocol = "tcp"
 
   [[services.ports]]
-    port = 80
     handlers = ["http"]
+    port = 80
 
   [[services.ports]]
-    port = 443
     handlers = ["tls", "http"]
-
-  [[services.tcp_checks]]
-    interval = 10000
-    timeout = 2000
-    grace_period = "30s"
-    restart_limit = 0
+    port = 443
